Prevent scrollbar from repositioning web page.

--- a/main/static/css/base.css
+++ b/main/static/css/base.css
@@ -1,3 +1,7 @@
+html {
+  overflow-y: scroll;
+}
+
 .navbar-nav.navbar-center {
             position: absolute;
             left: 50%;
